...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/lin_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ProgressBar
...
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/circular_progress_bar"
            android:background="@drawable/circle_shape"
            android:layout_gravity="center_horizontal" />

        <GridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:numColumns="6"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lin_btn_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
...
                        android:padding="8dp"
                        android:text="@string/raz_btn_label"
                        android:textAllCaps="false"
                        android:textColor="@color/my_white" />

                    <Button
                        android:id="@+id/help_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/btn_3_background"
                        android:padding="8dp"
                        android:text="@string/help_btn_label"
...

        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/btm_keyboard_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
...
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="2"
            android:textColor="@color/my_white" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="3"
            android:textColor="@color/my_white" />
...
